--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run: pip install -r requirements_dev.txt
+        run: pip install .[testing]
       - name: pre-commit validation
         run: pre-commit run --files src/*
       - name: Security checks
@@ -46,6 +46,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+            pip install .
             pip install .[testing]
       - name: Test with pytest
         run: pytest -vvvsx -m "not slow"
